# ntust-auto-repeal-votes

./: .gitignore  LICENSE  README.md  bun.lockb  package.json  rollup.config.inject.js  tsconfig.inject.json
.github/workflows/: release.yml
src/: app.css
src-inject/: common.ts  courses.ts  index.ts  voting.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  ntust.json
src-tauri/js/: do_vote.js  find_courses.js  submit.js
src-tauri/src/: lib.rs  main.rs
src/lib/: commands.ts  course.ts  manifest.ts  states.svelte.ts  window.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/select-courses/: +page.svelte
src/routes/voting/: +page.svelte
src/routes/voting-confirm/: +page.svelte
