[package]
name = "ntust-auto-repeal-votes"
version = "0.1.0"
description = "NTUST Auto Repeal Votes Application"
authors = ["CRT-HAO", "Hayden Chang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"
tokio = { version = "1.37.0", features = ["time"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
