[package]
name = "ntust-auto-repeal-votes"
version = "0.1.0"
description = "A tool designed for NTUST to automatically cast blank votes in course evaluations."
authors = ["Hayden Chang <m831718@gmail.com>"]
repository = "https://github.com/hayd1n/ntust-auto-repeal-votes"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ntust_auto_repeal_votes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
